--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -1,33 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/favoritosFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
-    android:paddingBottom="16dp">
+    android:fillViewport="true">
 
-    <!-- Header personalizado con sombra -->
     <LinearLayout
-        android:id="@+id/headerFavoritos"
         android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="@android:color/white"
-        android:elevation="4dp"
-        android:paddingHorizontal="16dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
+        <!-- Header -->
+        <LinearLayout
+            android:id="@+id/headerFavoritos"
+            android:layout_width="match_parent"
+            android:layout_height="85dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:background="@android:color/white"
+            android:elevation="4dp">
+
+            <TextView
+                android:id="@+id/tituloFavoritos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Favoritos"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+
+
+        <!-- Sección de Publicaciones -->
         <TextView
-            android:id="@+id/tituloFavoritos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Favoritos"
-            android:textSize="22sp"
+            android:text="Publicaciones (Favoritas)"
+            android:paddingHorizontal="16dp"
             android:textStyle="bold"
-            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="8dp"
             android:textColor="@android:color/black" />
+
+        <!-- Simulación de publicaciones -->
+        <include layout="@layout/item_publicacion" />
+        <include layout="@layout/item_publicacion" />
+        <include layout="@layout/item_publicacion" />
+
     </LinearLayout>
-
-</LinearLayout>
-
+</ScrollView>
